--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pdftron/webviewer": "^8.11.0",
     "next": "13.0.6",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^6.2.0",
     "sass": "^1.56.2"
   }
 }
