--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "next": "13.0.6",
     "nodemailer": "^6.8.0",
+    "postcss": "^8.4.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.56.2"
+    "sass": "^1.56.2",
+    "tailwindcss": "^3.2.4"
   }
 }
